--- a/WebAPI.Template/WebAPI.Template.csproj
+++ b/WebAPI.Template/WebAPI.Template.csproj
@@ -8,6 +8,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
+    <PackageReference Include="NAutowired" Version="1.1.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BLL.Template\BLL.Template.csproj" />
+    <ProjectReference Include="..\Extension.Template\Extension.Template.csproj" />
   </ItemGroup>
 
 </Project>
