--- a/Kirov.Template.DAL/Kirov.Template.DAL.csproj
+++ b/Kirov.Template.DAL/Kirov.Template.DAL.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp2.2\Kirov.Template.DAL.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netcoreapp2.2\Kirov.Template.DAL.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="Dapper.Contrib" Version="1.60.1" />
@@ -14,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Extension.Template\Extension.Template.csproj" />
+    <ProjectReference Include="..\Kirov.Template.Extension\Kirov.Template.Extension.csproj" />
   </ItemGroup>
 
 </Project>
