--- a/Kirov.Template.WebAPI/Kirov.Template.WebAPI.csproj
+++ b/Kirov.Template.WebAPI/Kirov.Template.WebAPI.csproj
@@ -5,6 +5,14 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp2.2\Kirov.Template.WebAPI.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netcoreapp2.2\Kirov.Template.WebAPI.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
@@ -14,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BLL.Template\BLL.Template.csproj" />
-    <ProjectReference Include="..\Extension.Template\Extension.Template.csproj" />
+    <ProjectReference Include="..\Kirov.Template.BLL\Kirov.Template.BLL.csproj" />
+    <ProjectReference Include="..\Kirov.Template.Extension\Kirov.Template.Extension.csproj" />
   </ItemGroup>
 
 </Project>
